--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
   width: 200px;
   height: 200px;
   background: #ef454a;
+  /* 四角が丸くなる  */
   border-radius: 50%;
   margin: 30px auto;
   text-align: center;
@@ -13,4 +14,5 @@ body {
   color: #fff;
   font-weight: bold;
   font-size: 42px;
+  cursor: pointer;
 }
