--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,14 @@ body {
   font-weight: bold;
   font-size: 42px;
   cursor: pointer;
-  box-shadow: 0 10px 0 #ef454a;
+  box-shadow: 0 10px 0 #d1483e;
 }
 
-#btn:hover{
+#btn:hover {
   opacity: 0.8;
+}
+
+#btn:active {
+  box-shadow: 0 5px 0 #d1483e;
+  margin-top: 35px;
 }
